{
  "version": 4,
  "terraform_version": "1.5.0",
  "serial": 140,
  "lineage": "7d5bc97c-bebc-84da-1a8e-575298c8b26c",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "mumbai-instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-026576dd556f3a732",
            "arn": "arn:aws:ec2:ap-south-1:061685900439:instance/i-064a8a7e82e84a9af",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-064a8a7e82e84a9af",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "mumbai-23th-june",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0cadb2da57b87b4d2",
            "private_dns": "ip-10-10-0-9.ap-south-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.10.0.9",
            "public_ip": "13.233.223.44",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-018484c4abe7ec92f",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0373c40c1043d0a3c",
            "tags": {
              "Name": "Mumbai-Instance"
            },
            "tags_all": {
              "Name": "Mumbai-Instance"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-016eab38bb541d6a5"
            ]
          },
          "dependencies": [
            "aws_key_pair.mumbai-key-pair",
            "aws_security_group.Mumbai_SG_allow_ssh_http",
            "aws_subnet.mumbai-subnet-1a",
            "aws_vpc.mumbai-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "mumbai-instance-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-026576dd556f3a732",
            "arn": "arn:aws:ec2:ap-south-1:061685900439:instance/i-0da37cc987a446af9",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0da37cc987a446af9",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "mumbai-23th-june",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-002de8dfa980b7f0b",
            "private_dns": "ip-10-10-0-32.ap-south-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.10.0.32",
            "public_ip": "65.2.9.27",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0943006f2d68a5aa4",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0373c40c1043d0a3c",
            "tags": {
              "Name": "Mumbai-Instance-2"
            },
            "tags_all": {
              "Name": "Mumbai-Instance-2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-016eab38bb541d6a5"
            ]
          },
          "dependencies": [
            "aws_key_pair.mumbai-key-pair",
            "aws_security_group.Mumbai_SG_allow_ssh_http",
            "aws_subnet.mumbai-subnet-1a",
            "aws_vpc.mumbai-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "mumbai_IG",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:061685900439:internet-gateway/igw-0bb75e1ed9e1fb990",
            "id": "igw-0bb75e1ed9e1fb990",
            "owner_id": "061685900439",
            "tags": {
              "Name": "Mumbai-IG"
            },
            "tags_all": {
              "Name": "Mumbai-IG"
            },
            "vpc_id": "vpc-032359d1aa3483004"
          },
          "dependencies": [
            "aws_vpc.mumbai-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "mumbai-LB",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:061685900439:loadbalancer/app/cardwebsite-LB-Terraform/26655d7d5c7ba819",
            "arn_suffix": "app/cardwebsite-LB-Terraform/26655d7d5c7ba819",
            "desync_mitigation_mode": "defensive",
            "dns_name": "cardwebsite-LB-Terraform-1398997174.ap-south-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:ap-south-1:061685900439:loadbalancer/app/cardwebsite-LB-Terraform/26655d7d5c7ba819",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "cardwebsite-LB-Terraform",
            "preserve_host_header": false,
            "security_groups": [
              "sg-016eab38bb541d6a5"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0373c40c1043d0a3c"
              },
              {
                "subnet_id": "subnet-065a5d4b8230fe394"
              }
            ],
            "subnets": [
              "subnet-0373c40c1043d0a3c",
              "subnet-065a5d4b8230fe394"
            ],
            "tags": {
              "Environment": "prod"
            },
            "tags_all": {
              "Environment": "prod"
            },
            "vpc_id": "vpc-032359d1aa3483004",
            "xff_header_processing_mode": "append",
            "zone_id": "ZP97RAFLXTNZK"
          },
          "dependencies": [
            "aws_security_group.Mumbai_SG_allow_ssh_http",
            "aws_subnet.mumbai-subnet-1a",
            "aws_subnet.mumbai-subnet-1b",
            "aws_vpc.mumbai-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "mumbai-LB-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:061685900439:loadbalancer/app/Mumbai-LB-1/00b315dbe2cf8cb9",
            "arn_suffix": "app/Mumbai-LB-1/00b315dbe2cf8cb9",
            "desync_mitigation_mode": "defensive",
            "dns_name": "Mumbai-LB-1-72688154.ap-south-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:ap-south-1:061685900439:loadbalancer/app/Mumbai-LB-1/00b315dbe2cf8cb9",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "Mumbai-LB-1",
            "preserve_host_header": false,
            "security_groups": [
              "sg-016eab38bb541d6a5"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0373c40c1043d0a3c"
              },
              {
                "subnet_id": "subnet-065a5d4b8230fe394"
              }
            ],
            "subnets": [
              "subnet-0373c40c1043d0a3c",
              "subnet-065a5d4b8230fe394"
            ],
            "tags": {
              "Environment": "production"
            },
            "tags_all": {
              "Environment": "production"
            },
            "vpc_id": "vpc-032359d1aa3483004",
            "xff_header_processing_mode": "append",
            "zone_id": "ZP97RAFLXTNZK"
          },
          "dependencies": [
            "aws_security_group.Mumbai_SG_allow_ssh_http",
            "aws_subnet.mumbai-subnet-1a",
            "aws_subnet.mumbai-subnet-1b"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "mumbai-listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:061685900439:listener/app/cardwebsite-LB-Terraform/26655d7d5c7ba819/19e2048c0978ba60",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-south-1:061685900439:targetgroup/cardwebsite-terraform/8363910fe29c4df5",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:061685900439:listener/app/cardwebsite-LB-Terraform/26655d7d5c7ba819/19e2048c0978ba60",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-south-1:061685900439:loadbalancer/app/cardwebsite-LB-Terraform/26655d7d5c7ba819",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.mumbai-LB",
            "aws_lb_target_group.mumbai-TG",
            "aws_security_group.Mumbai_SG_allow_ssh_http",
            "aws_subnet.mumbai-subnet-1a",
            "aws_subnet.mumbai-subnet-1b",
            "aws_vpc.mumbai-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "mumbai-listener-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:061685900439:listener/app/Mumbai-LB-1/00b315dbe2cf8cb9/270f47854fd2cdaf",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-south-1:061685900439:targetgroup/Mumbai-TG-1/7bd7887ba57cf307",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:061685900439:listener/app/Mumbai-LB-1/00b315dbe2cf8cb9/270f47854fd2cdaf",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-south-1:061685900439:loadbalancer/app/Mumbai-LB-1/00b315dbe2cf8cb9",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.mumbai-LB-1",
            "aws_lb_target_group.mumbai-TG-1",
            "aws_security_group.Mumbai_SG_allow_ssh_http",
            "aws_subnet.mumbai-subnet-1a",
            "aws_subnet.mumbai-subnet-1b",
            "aws_vpc.mumbai-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "mumbai-TG",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:061685900439:targetgroup/cardwebsite-terraform/8363910fe29c4df5",
            "arn_suffix": "targetgroup/cardwebsite-terraform/8363910fe29c4df5",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:061685900439:targetgroup/cardwebsite-terraform/8363910fe29c4df5",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "cardwebsite-terraform",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-032359d1aa3483004"
          },
          "dependencies": [
            "aws_vpc.mumbai-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "mumbai-TG-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:061685900439:targetgroup/Mumbai-TG-1/7bd7887ba57cf307",
            "arn_suffix": "targetgroup/Mumbai-TG-1/7bd7887ba57cf307",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:061685900439:targetgroup/Mumbai-TG-1/7bd7887ba57cf307",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "Mumbai-TG-1",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-032359d1aa3483004"
          },
          "dependencies": [
            "aws_vpc.mumbai-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "mumbai-TG-attachment-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:ap-south-1:061685900439:targetgroup/cardwebsite-terraform/8363910fe29c4df5-20230630014105345700000005",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:ap-south-1:061685900439:targetgroup/cardwebsite-terraform/8363910fe29c4df5",
            "target_id": "i-064a8a7e82e84a9af"
          },
          "dependencies": [
            "aws_instance.mumbai-instance",
            "aws_key_pair.mumbai-key-pair",
            "aws_lb_target_group.mumbai-TG",
            "aws_security_group.Mumbai_SG_allow_ssh_http",
            "aws_subnet.mumbai-subnet-1a",
            "aws_vpc.mumbai-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "mumbai-TG-attachment-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:ap-south-1:061685900439:targetgroup/cardwebsite-terraform/8363910fe29c4df5-20230630014115356500000006",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:ap-south-1:061685900439:targetgroup/cardwebsite-terraform/8363910fe29c4df5",
            "target_id": "i-0da37cc987a446af9"
          },
          "dependencies": [
            "aws_instance.mumbai-instance-2",
            "aws_key_pair.mumbai-key-pair",
            "aws_lb_target_group.mumbai-TG",
            "aws_security_group.Mumbai_SG_allow_ssh_http",
            "aws_subnet.mumbai-subnet-1a",
            "aws_vpc.mumbai-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "mumbai-RT",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:061685900439:route-table/rtb-05686b335aa2d9765",
            "id": "rtb-05686b335aa2d9765",
            "owner_id": "061685900439",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0bb75e1ed9e1fb990",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "mumbai-RT"
            },
            "tags_all": {
              "Name": "mumbai-RT"
            },
            "timeouts": null,
            "vpc_id": "vpc-032359d1aa3483004"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.mumbai_IG",
            "aws_vpc.mumbai-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "mumbai-RT-associaciation-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03d3be6b2af25499b",
            "route_table_id": "rtb-05686b335aa2d9765",
            "subnet_id": "subnet-0373c40c1043d0a3c"
          },
          "dependencies": [
            "aws_internet_gateway.mumbai_IG",
            "aws_route_table.mumbai-RT",
            "aws_subnet.mumbai-subnet-1a",
            "aws_vpc.mumbai-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "mumbai-RT-associaciation-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a5554fe6233138f3",
            "route_table_id": "rtb-05686b335aa2d9765",
            "subnet_id": "subnet-065a5d4b8230fe394"
          },
          "dependencies": [
            "aws_internet_gateway.mumbai_IG",
            "aws_route_table.mumbai-RT",
            "aws_subnet.mumbai-subnet-1b",
            "aws_vpc.mumbai-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "Mumbai_SG_allow_ssh_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:061685900439:security-group/sg-016eab38bb541d6a5",
            "description": "Allow SSH and HTTP inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-016eab38bb541d6a5",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP from PC",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH from PC",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "allow_ssh_http",
            "name_prefix": "",
            "owner_id": "061685900439",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow_ssh_http"
            },
            "tags_all": {
              "Name": "allow_ssh_http"
            },
            "timeouts": null,
            "vpc_id": "vpc-032359d1aa3483004"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.mumbai-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "mumbai-subnet-1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:061685900439:subnet/subnet-0373c40c1043d0a3c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.10.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0373c40c1043d0a3c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "061685900439",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Mumbai-subnet-1a"
            },
            "tags_all": {
              "Name": "Mumbai-subnet-1a"
            },
            "vpc_id": "vpc-032359d1aa3483004"
          },
          "dependencies": [
            "aws_vpc.mumbai-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "mumbai-subnet-1b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:061685900439:subnet/subnet-065a5d4b8230fe394",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.10.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-065a5d4b8230fe394",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "061685900439",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Mumbai-subnet-1b"
            },
            "tags_all": {
              "Name": "Mumbai-subnet-1b"
            },
            "vpc_id": "vpc-032359d1aa3483004"
          },
          "dependencies": [
            "aws_vpc.mumbai-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "mumbai-subnet-1c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:061685900439:subnet/subnet-0258c5e1c5edd1e34",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1c",
            "availability_zone_id": "aps1-az2",
            "cidr_block": "10.10.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0258c5e1c5edd1e34",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "061685900439",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Mumbai-subnet-1c"
            },
            "tags_all": {
              "Name": "Mumbai-subnet-1c"
            },
            "vpc_id": "vpc-032359d1aa3483004"
          },
          "dependencies": [
            "aws_vpc.mumbai-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "mumbai-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:061685900439:vpc/vpc-032359d1aa3483004",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.10.0.0/16",
            "default_network_acl_id": "acl-088273f2d5830dd06",
            "default_route_table_id": "rtb-0ca0bc6e7155a4d38",
            "default_security_group_id": "sg-0aad0f117b2bae228",
            "dhcp_options_id": "dopt-04fb04627013b5d59",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-032359d1aa3483004",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0ca0bc6e7155a4d38",
            "owner_id": "061685900439",
            "tags": {
              "Name": "Mumbai-VPC"
            },
            "tags_all": {
              "Name": "Mumbai-VPC"
            }
          }
        }
      ]
    }
  ]
}